# tfrecord-rs

./: Cargo.toml  README.md
src/: convert.rs  error.rs  iter.rs  lib.rs  loader.rs  parse.rs  parser.rs  utils.rs
src/example/: mod.rs
src/from_tf/: event.rs  example.rs  example_parser_configuration.rs  feature.rs  mod.rs  resource_handle.rs  summary.rs  tensor.rs  tensor_shape.rs  types.rs
src/loader/: mod.rs
tests/: iter.rs  loader.rs
