[package]
name = "tfrecord-rs"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = { version = "2", features = ["with-bytes"] }
crc = "1.8.1"
byteorder = "1"
memmap = "0.6.2"
tensorflow = "0.13.0"
tch = "0.0.8"
glob = "0.3.0"
rayon = "1.0"
lru = "0.1.15"
image = "0.21.1"
rand = "0.6.5"
ndarray = "0.12.1"
crossbeam = "0.7"
mozjpeg = "0.8.14"
log = "0.4.6"

[dev-dependencies]
maplit = "1.0.1"
libflate = "0.1.22"
