[package]
name = "tfrecord-rs"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
protobuf = { version = "^2", features = ["with-bytes"] }
crc = "^1.8"
byteorder = "^1"
memmap = "^0.6"
tch = { git = "https://github.com/LaurentMazare/tch-rs.git", branch = "master" }
glob = "^0.3"
rayon = "^1.0"
lru = "^0.1"
image = "^0.21"
rand = "^0.6"
ndarray = "^0.12"
crossbeam = "^0.7"
mozjpeg = "^0.8"
log = "^0.4"
failure = "^0"

[dev-dependencies]
maplit = "^1.0"
libflate = "^0.1"
par-map = "^0.1"
